fixing size on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -132,7 +132,7 @@
    -webkit-overflow-scrolling:touch !important;
    overflow-y: scroll !important;
    @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
-     padding-left: 15px;
+     margin-left: 15px;
      width: 90%;
      height: 65%;
    }
